--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "dayjs": "^1.11.7",
     "eslint": "^7.23.0",
     "eslint-config-next": "^12.0.4",
+    "litepicker": "^2.0.11",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
